[project]
name = "pymatio"
version = "0.1.0"
description = ""
authors = [
    { name = "zhengmy", email = "zhengmy <zhengmy@ion.ac.cn>"}
]
# license = "GPL"
readme = "README.md"
classifiers = [
    "License :: GPL"
]

[project.urls]
Homepage = "https://github.com/myuanz/pymatio"

# [tool.poetry.group.dev.dependencies]
# setuptools = "^69.0.3"
# pybind11 = "^2"
# cibuildwheel = "^2.16.2"
# pytest = "^7.4.3"
# ipykernel = "^6.29.5"
# tyro = "^0.8.11"

# [[tool.poetry.source]]
# name = "tsinghua"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# priority = "primary"

[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
sdist.include = [
    "cmake",
    "src",
    "pymatio",
    "pyproject.toml",
    "CMakeLists.txt",
    "README.md"
]

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]
archs = ["auto64"]
# TODO: support x86 or i386, it seems that xmake `find python` can't find x86 python

build-verbosity = 3
build-frontend = "build"
test-requires = "pytest"
test-command = "pytest {project}/tests"

linux.container-engine = "podman"
# linux.manylinux-x86_64-image = "docker.io/myuanz/pymatio-base-manylinux:latest"
# linux.musllinux-x86_64-image = "docker.io/myuanz/pymatio-base-musllinux:latest"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
