[project]
name = "pymatio"
version = "0.1.3"
description = "Fast, compact Python library for reading MAT5/MAT7.3 files using matio."
authors = [
    { name = "zhengmy", email = "zhengmy@ion.ac.cn"}
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD 2-Clause License",
]
requires-python = '>=3.9, <3.13'
dependencies = []

[project.urls]
Homepage = "https://github.com/myuanz/pymatio"


[build-system]
requires = [
    "scikit-build-core >=0.4.3",
    "nanobind >=1.3.2",
    "typing_extensions; python_version < '3.11'"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
sdist.include = [
    "cmake/",
    "src/",
    "pymatio/",
    "tests/",
    "pyproject.toml",
    "CMakeLists.txt",
    "README.md",
    "README_en.md",
]

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]
archs = ["auto64"]

free-threaded-support = true

build-verbosity = 1
build-frontend = "build"
test-requires = "pytest"
test-command = "pytest {project}/tests"

linux.container-engine = "podman"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.uv.workspace]
members = ["test"]
