[project]
name = "pymatio"
version = "0.1.3"
description = "Fast, compact MAT file reader supporting MAT5/MAT7.3 formats within a 2MiB footprint. Eliminates dependency on bulky scipy and h5py. Based on Python binding for matio."
authors = [
    { name = "zhengmy", email = "zhengmy@ion.ac.cn"}
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD 2-Clause License",
]
requires-python = '>=3.9,<3.14'
dependencies = [
    "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/myuanz/pymatio"


[build-system]
requires = [
    "scikit-build-core>=0.11.5",
    "nanobind",
    "typing_extensions; python_version < '3.11'"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"
sdist.include = [
    "cmake/",
    "src/",
    "pymatio/",
    "tests/",
    "pyproject.toml",
    "CMakeLists.txt",
    "README.md",
    "README_en.md",
]

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
archs = ["auto64"]


build-verbosity = 1
build-frontend = "build"
test-requires = "pytest"
test-command = "pytest {project}/tests"

linux.container-engine = "podman"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[dependency-groups]
dev = [
    "mat73>=0.65",
    "nanobind>=2.7.0",
    "numpy>=2.0",
    "pytest>=8.3.3",
    "scikit-build-core[pyproject]>=0.11.4",
    "scipy>=1.13.1",
]
